# exam-question-generator-2.0

./: .gitignore  CMakeLists.txt  README.md  metadata.yml  run-ctest.ps1
include/: draft_question_parser.hpp  exam_question_generator.hpp  latex_renderer.hpp  option_parser_strategy.hpp  question.hpp
proof_screenshots/: NAMING_GUIDE.txt  rename_proof_screenshots.ps1
results/: multiple_choice_output.tex  true_false_output.tex
samples/: mixed_multiple_choice_sample.tex  mixed_multiple_choice_sample.txt  multi_question_sample.tex  multi_question_sample.txt  multiple_choice_sample.txt  true_false_sample.txt
src/: draft_question_parser.cpp  exam_question_generator.cpp  latex_renderer.cpp  main.cpp  option_parser_strategy.cpp
tests/: test_exam_generator.cpp
